# BEF

./: .gitignore  FUSION_ALPHA_USAGE_GUIDE.md  README.md  pipeline_demo.py  run_full_pipeline.sh
BICEPsrc/BICEPrust/bicep/: Cargo.toml  README.md
BICEPsrc/BICEPrust/bicep/crates/bicep-core/: Cargo.toml
BICEPsrc/BICEPrust/bicep/crates/bicep-core/src/: diffusion.rs  drift.rs  lib.rs  measure.rs  noise.rs  path.rs  state.rs
BICEPsrc/BICEPrust/bicep/crates/bicep-core/src/integrators/: euler_maruyama.rs  helpers.rs  heun_stratonovich.rs  milstein.rs  mod.rs
BICEPsrc/BICEPrust/bicep/crates/bicep-core/tests/: bm_moments.rs  boundaries.rs  determinism.rs  gbm_lognormal.rs  ito_strat_equivalence.rs  ou_moments.rs
BICEPsrc/BICEPrust/bicep/crates/bicep-cpu/: Cargo.toml
BICEPsrc/BICEPrust/bicep/crates/bicep-cpu/src/: lib.rs
BICEPsrc/BICEPrust/bicep/crates/bicep-examples/: Cargo.toml
BICEPsrc/BICEPrust/bicep/crates/bicep-examples/src/: lib.rs
BICEPsrc/BICEPrust/bicep/crates/bicep-gpu/: Cargo.toml
BICEPsrc/BICEPrust/bicep/crates/bicep-gpu/src/: lib.rs
BICEPsrc/BICEPrust/bicep/crates/bicep-io/: Cargo.toml
BICEPsrc/BICEPrust/bicep/crates/bicep-io/src/: cli.rs  lib.rs  main.rs
BICEPsrc/BICEPrust/bicep/crates/bicep-models/: Cargo.toml
BICEPsrc/BICEPrust/bicep/crates/bicep-models/src/: brownian.rs  double_well.rs  gbm.rs  lib.rs  ou.rs
BICEPsrc/BICEPrust/bicep/crates/bicep-py/: Cargo.toml
BICEPsrc/BICEPrust/bicep/crates/bicep-py/src/: lib.rs
BICEPsrc/BICEPrust/bicep/crates/bicep-sampler/: Cargo.toml
BICEPsrc/BICEPrust/bicep/crates/bicep-sampler/src/: lib.rs
BICEPsrc/BICEPrust/bicep/docs/: README-math.md
FusionAlpha/: Cargo.toml  integration_test.py
FusionAlpha/crates/fusion-bindings/: Cargo.toml
FusionAlpha/crates/fusion-bindings/src/: lib.rs  simple_lib.rs
FusionAlpha/crates/fusion-core/: Cargo.toml
FusionAlpha/crates/fusion-core/src/: actions.rs  graph.rs  lib.rs  priors.rs  propagation.rs
FusionAlpha/crates/fusion-envs/: Cargo.toml
FusionAlpha/crates/fusion-envs/src/: ant_soccer.rs  humanoid_maze.rs  lib.rs  puzzle.rs
FusionAlpha/examples/: simple_demo.rs
FusionAlpha/ogbench_eval/: fusion_alpha_agent.py  mock_ogbench.py  run_ogbench_eval.py
FusionAlpha/python/: bicep_to_edges.py  enn_forward.py  enn_fusion_demo.py  fusion_alpha_demo.py  graph_builder.py  ogbench_integration.py  setup.py  simple_demo.py
enn-cpp/: CMakeLists.txt  Makefile  README.md  build_for_a100.sh
enn-cpp/apps/: bicep_to_enn  bicep_to_enn.cpp  committor_train  committor_train.cpp  seq_debug  seq_debug.cpp  seq_demo  seq_demo.cpp  seq_demo_bptt  seq_demo_bptt.cpp
enn-cpp/include/enn/: cell.hpp  collapse.hpp  data.hpp  optim.hpp  regularizers.hpp  trainer.hpp  types.hpp
enn-cpp/src/: cell.cpp  collapse.cpp  data.cpp  regularizers.cpp  trainer.cpp
enn-cpp/tests/: test_bptt_gradcheck  test_bptt_gradcheck.cpp  test_gradcheck  test_gradcheck.cpp  test_psd  test_psd.cpp  test_softmax  test_softmax.cpp
