[workspace]
members = [
    "crates/fusion-core",
    "crates/fusion-envs",
    "crates/fusion-bindings",
]
resolver = "2"

[workspace.dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1