[workspace]
members = [
    "crates/bicep-core",
    "crates/bicep-models", 
    "crates/bicep-sampler",
    "crates/bicep-io",
    "crates/bicep-cpu",
    "crates/bicep-gpu",
    "crates/bicep-py",
    "crates/bicep-examples",
]

resolver = "2"

[workspace.dependencies]
nalgebra = "0.33"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
rayon = "1.8"
arrow = "53"
parquet = "53"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

chrono = { version = "0.4", features = ["serde"] }
wide = "0.7"
bytemuck = "1.0"

# Performance dependencies
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
