[package]
name = "fusion-bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "fusion_alpha"
crate-type = ["cdylib"]

[dependencies]
fusion-core = { path = "../fusion-core" }
fusion-envs = { path = "../fusion-envs" }
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = "0.15"
anyhow = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.20"