[package]
name = "fusion-core"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }