[package]
name = "bicep-cpu"
version = "0.1.0"
edition = "2021"

[dependencies]
bicep-core = { path = "../bicep-core" }
bicep-sampler = { path = "../bicep-sampler" }
bicep-models = { path = "../bicep-models" }
rayon = { workspace = true }
nalgebra = { workspace = true }
wide = "0.7"  # SIMD wrapper
bytemuck = "1.0"  # Safe casting to SIMD types
anyhow = { workspace = true }