[package]
name = "bicep-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gbm"
path = "src/bin/gbm.rs"

[[bin]]
name = "double_well_fpt"  
path = "src/bin/double_well_fpt.rs"

[[bin]]
name = "strat_vs_ito"
path = "src/bin/strat_vs_ito.rs"

[[bin]]
name = "parity_trajectories"
path = "src/bin/parity_trajectories.rs"

[dependencies]
bicep-core = { path = "../bicep-core" }
bicep-models = { path = "../bicep-models" }
bicep-sampler = { path = "../bicep-sampler" }
nalgebra = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
polars = { version = "0.35", features = ["lazy", "parquet", "dtype-struct"] }
rand = "0.8"